Fixed Mobile layout problems
Thought this was part of the initial commit. Not used to Github.

--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ color: rgba(255,255,255,0.8);
 padding: 0 0 1em 0;
 }
 .content { 
-    width: 100vw; 
+    width: 100%; 
     max-width: 1170px;
     padding: 15px;
     margin: 0 auto;
@@ -145,6 +145,7 @@ textarea {
 
 footer { 
     margin-top: 10vh;
+    display: none;
 }
 footer ul { 
     text-align: center;
@@ -170,16 +171,12 @@ footer li a:hover {
 }
 
 section.about { 
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: relative;
+    padding: 15px;
 }
-section.about .about-content { 
-    position: absolute; 
-    top: 50%; 
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
+
 
 
 .about-content h3 { 
@@ -219,6 +216,13 @@ section.about .about-content {
     height: 100vh;
     width: 100vw;
 }
+section.about .about-content { 
+    position: absolute; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+    footer { display: block }
 }
 
 
